Implement Invitation & MyaudiUserInvitation entities - manage invit myAudiUser - 0.2
